--- a/Main/Application/templates/Application/board.html
+++ b/Main/Application/templates/Application/board.html
@@ -313,205 +313,11 @@
         </div>
     </section>
 
-   
-
-    <section id="section-classes" class="container-fluid">
-        <div class="standard">
-            <div class="standard__12">
-                <h1 class="standard__12--heading">Class 12</h1>
-                <div class="standard__12--box">
-                    <h3 class="standard__12--box--heading">Maths</h3>
-                    <div class="standard__12--box--content">
-                        <div class="spradeep scard">
-                            <img class="scard__img" src="{% static 'images/pradeep.png' %}" alt="">
-                            <h3 class="scard__title">Pradeep's</h3>
-                        </div>
-                        <div class="sncert scard">
-                            <img class="scard__img" src="{% static 'images/arora.png' %}" alt="">
-                            <h3 class="scard__title">NCERT</h3>
-                        </div>
-                        <button class="standard__12--box--content-btn"><span>View All</span></button>
-                    </div>
-                </div>
-                <div class="standard__12--box">
-                    <h3 class="standard__12--box--heading">Physics</h3>
-                    <div class="standard__12--box--content">
-                        <div class="spradeep scard">
-                            <img class="scard__img" src="{% static 'images/pradeep.png' %}" alt="">
-                            <h3 class="scard__title">Pradeep's</h3>
-                        </div>
-                        <div class="sncert scard">
-                            <img class="scard__img" src="{% static 'images/arora.png' %}" alt="">
-                            <h3 class="scard__title">NCERT</h3>
-                        </div>
-                        <button class="standard__12--box--content-btn"><span>View All</span></button>
-                    </div>
-                </div>
-                <div class="standard__12--box">
-                    <h3 class="standard__12--box--heading">Biology</h3>
-                    <div class="standard__12--box--content">
-                        <div class="spradeep scard">
-                            <img class="scard__img" src="{% static 'images/pradeep.png' %}" alt="">
-                            <h3 class="scard__title">Pradeep's</h3>
-                        </div>
-                        <div class="sncert scard">
-                            <img class="scard__img" src="{% static 'images/arora.png' %}" alt="">
-                            <h3 class="scard__title">NCERT</h3>
-                        </div>
-                        <button class="standard__12--box--content-btn"><span>View All</span></button>
-                    </div>
-                </div>
-                <div class="standard__12--box">
-                    <h3 class="standard__12--box--heading">Chemistry</h3>
-                    <div class="standard__12--box--content">
-                        <div class="spradeep scard">
-                            <img class="scard__img" src="{% static 'images/pradeep.png' %}" alt="">
-                            <h3 class="scard__title">Pradeep's</h3>
-                        </div>
-                        <div class="sncert scard">
-                            <img class="scard__img" src="{% static 'images/arora.png' %}" alt="">
-                            <h3 class="scard__title">NCERT</h3>
-                        </div>
-                        <button class="standard__12--box--content-btn"><span>View All</span></button>
-                    </div>
-                </div>
-            </div>
-
-            <div class="standard__11">
-                <h1 class="standard__11--heading">Class 11</h1>
-                <div class="standard__11--box">
-                    <h3 class="standard__11--box--heading">Maths</h3>
-                    <div class="standard__11--box--content">
-                        <div class="spradeep scard">
-                            <img class="scard__img" src="{% static 'images/pradeep.png' %}" alt="">
-                            <h3 class="scard__title">Pradeep's</h3>
-                        </div>
-                        <div class="sncert scard">
-                            <img class="scard__img" src="{% static 'images/arora.png' %}" alt="">
-                            <h3 class="scard__title">NCERT</h3>
-                        </div>
-                        <button class="standard__11--box--content-btn"><span>View All</span></button>
-                    </div>
-                </div>
-                <div class="standard__11--box">
-                    <h3 class="standard__11--box--heading">Physics</h3>
-                    <div class="standard__11--box--content">
-                        <div class="spradeep scard">
-                            <img class="scard__img" src="{% static 'images/pradeep.png' %}" alt="">
-                            <h3 class="scard__title">Pradeep's</h3>
-                        </div>
-                        <div class="sncert scard">
-                            <img class="scard__img" src="{% static 'images/arora.png' %}" alt="">
-                            <h3 class="scard__title">NCERT</h3>
-                        </div>
-                        <button class="standard__11--box--content-btn"><span>View All</span></button>
-                    </div>
-                </div>
-                <div class="standard__11--box">
-                    <h3 class="standard__11--box--heading">Biology</h3>
-                    <div class="standard__11--box--content">
-                        <div class="spradeep scard">
-                            <img class="scard__img" src="{% static 'images/pradeep.png' %}" alt="">
-                            <h3 class="scard__title">Pradeep's</h3>
-                        </div>
-                        <div class="sncert scard">
-                            <img class="scard__img" src="{% static 'images/arora.png' %}" alt="">
-                            <h3 class="scard__title">NCERT</h3>
-                        </div>
-                        <button class="standard__11--box--content-btn"><span>View All</span></button>
-                    </div>
-                </div>
-                <div class="standard__11--box">
-                    <h3 class="standard__11--box--heading">Chemistry</h3>
-                    <div class="standard__11--box--content">
-                        <div class="spradeep scard">
-                            <img class="scard__img" src="{% static 'images/pradeep.png' %}" alt="">
-                            <h3 class="scard__title">Pradeep's</h3>
-                        </div>
-                        <div class="sncert scard">
-                            <img class="scard__img" src="{% static 'images/arora.png' %}" alt="">
-                            <h3 class="scard__title">NCERT</h3>
-                        </div>
-                        <button class="standard__11--box--content-btn"><span>View All</span></button>
-                    </div>
-                </div>
-            </div>
-
-            <div class="standard__others">
-                <div class="lstandard">
-                    <h1 class="lstandard__heading">Class 10</h1>
-                    <div class="lstandard__box">
-                        <div class="lstandard__box--img">
-                            <img class="lstandard__box--img-image1" src="{% static 'images/abacus.png' %}" alt="">
-                            <h3 class="lstandard__box--img-title">Maths</h3>
-                        </div>
-                        <div class="lstandard__box--img">
-                            <img class="lstandard__box--img-image2" src="{% static 'images/science.png' %}" alt="">
-                            <h3 class="lstandard__box--img-title">Science</h3>
-                        </div>
-                    </div>
-                </div>
-                <div class="lstandard">
-                    <h1 class="lstandard__heading">Class 9</h1>
-                    <div class="lstandard__box">
-                        <div class="lstandard__box--img">
-                            <img class="lstandard__box--img-image1" src="{% static 'images/abacus.png' %}" alt="">
-                            <h3 class="lstandard__box--img-title">Maths</h3>
-                        </div>
-                        <div class="lstandard__box--img">
-                            <img class="lstandard__box--img-image2" src="{% static 'images/science.png' %}" alt="">
-                            <h3 class="lstandard__box--img-title">Science</h3>
-                        </div>
-                    </div>
-                </div>
-                <div class="lstandard">
-                    <h1 class="lstandard__heading">Class 8</h1>
-                    <div class="lstandard__box">
-                        <div class="lstandard__box--img">
-                            <img class="lstandard__box--img-image1" src="{% static 'images/abacus.png' %}" alt="">
-                            <h3 class="lstandard__box--img-title">Maths</h3>
-                        </div>
-                        <div class="lstandard__box--img">
-                            <img class="lstandard__box--img-image2" src="{% static 'images/science.png' %}" alt="">
-                            <h3 class="lstandard__box--img-title">Science</h3>
-                        </div>
-                    </div>
-                </div>
-                <div class="lstandard">
-                    <h1 class="lstandard__heading">Class 7</h1>
-                    <div class="lstandard__box">
-                        <div class="lstandard__box--img">
-                            <img class="lstandard__box--img-image1" src="{% static 'images/abacus.png' %}" alt="">
-                            <h3 class="lstandard__box--img-title">Maths</h3>
-                        </div>
-                        <div class="lstandard__box--img">
-                            <img class="lstandard__box--img-image2" src="{% static 'images/science.png' %}" alt="">
-                            <h3 class="lstandard__box--img-title">Science</h3>
-                        </div>
-                    </div>
-                </div>
-                <div class="lstandard">
-                    <h1 class="lstandard__heading">Class 6</h1>
-                    <div class="lstandard__box">
-                        <div class="lstandard__box--img">
-                            <img class="lstandard__box--img-image1" src="{% static 'images/abacus.png' %}" alt="">
-                            <h3 class="lstandard__box--img-title">Maths</h3>
-                        </div>
-                        <div class="lstandard__box--img">
-                            <img class="lstandard__box--img-image2" src="{% static 'images/science.png' %}" alt="">
-                            <h3 class="lstandard__box--img-title">Science</h3>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <img class="ellipses3" src="{% static 'images/ellipses.png' %}" alt="">
-    </section>
 
     <section id="section-live" class="container-fluid">
         <h1 class="live-heading">LIVE classes</h1>
         <div class="live">
-            <img class="live__img" src="{% static 'images/live.png' %}" alt="">
+            <img class="live__img" src="{% static 'images/live1.png' %}" alt="">
             <div class="live__box">
                 <div class="live__box--content">
                     <img class="live__box--content-img" src="{% static 'images/global-network.png' %}" alt="">
