--- a/Main/Application/templates/Application/board.html
+++ b/Main/Application/templates/Application/board.html
@@ -5,7 +5,7 @@
 
     <link rel="stylesheet" href="{% static 'main.css' %}">
 
-    <section id="landing-section" class="container-fluid">
+    <!-- <section id="landing-section" class="container-fluid">
         <div class="land">
             <img class="land__ellipses" src="{% static 'images/ellipses.png' %}" alt="">
             <div class="land__content">
@@ -17,7 +17,7 @@
                 <img class="land__img--ellipse" src="{% static 'images/ellipse.png' %}" alt="">
             </div>
         </div>
-    </section>
+    </section> -->
 
     <section id="state-section" class="container-fluid" >
         <img class="ellipses1" src="{% static 'images/ellipses.png' %}" alt="">
