--- a/Main/Application/templates/Application/board.html
+++ b/Main/Application/templates/Application/board.html
@@ -575,6 +575,7 @@
                     </div>
                     <div class="class1__content--box-item">
                         <img class="class1__content--box-item-img" src="{% static 'books/ENGLISH/51ZUM-M-FJL._SX354_BO1,204,203,200_.jpg' %}">
+                        <button class="class1__content--box-item-btn">Solve Now</button>
                         <h3 class="class1__content--box-item-title">NCERT - XII</h3>
                     </div>
                 </div>
@@ -838,9 +839,6 @@
             </div>
             
         </div>
-</div>
-</div>
-</div>
+    </footer>
 
-  
 {% endblock content %}
