--- a/Main/static/main.css
+++ b/Main/static/main.css
@@ -446,12 +446,11 @@ body {
   position: relative;
   left: 50%;
   transform: translateX(-50%);
-  font-size: 3rem;
+  font-size: 3.5rem;
   color: #4B4B4B;
   font-family: 'Poppins',sans-serif;
   font-weight: 700;
   word-spacing: 1rem;
-  border-bottom: 0.8rem solid #D60B3C;
   width: fit-content;
   border-radius: .8rem; }
   .course-heading span {
@@ -512,7 +511,7 @@ body {
     position: relative;
     width: 90%; }
     .course__picture--img {
-      width: 90%;
+      width: 80%;
       height: 50rem; }
     .course__picture--title {
       top: 3rem;
@@ -524,7 +523,7 @@ body {
 
 .course-btn {
   border: none;
-  font-size: 1.5rem;
+  font-size: 2rem;
   padding: .5rem 3rem;
   background-color: #D60B3C;
   border-radius: 1rem;
@@ -1923,6 +1922,109 @@ body {
     outline: none;
     border: none; }
 
+.math-heading {
+  font-size: 5rem;
+  color: #1E4190;
+  margin-left: 11.5rem;
+  margin-top: 5rem;
+  font-weight: 800;
+  font-family: 'Poppins',sans-serif; }
+
+.math-subheading {
+  margin-left: 11.5rem;
+  margin-top: 5rem;
+  color: #1E4190;
+  font-size: 3rem;
+  font-weight: 700;
+  font-family: 'Poppins',sans-serif;
+  margin-top: 1rem; }
+  .math-subheading span {
+    color: #D60B3C; }
+
+.math-img {
+  position: absolute;
+  left: -50%;
+  top: -40%;
+  height: 70rem;
+  z-index: -1; }
+
+.math {
+  margin-top: 2rem;
+  width: 85%;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%); }
+  .math .heading {
+    margin-top: 4rem;
+    padding-bottom: 1.5rem;
+    font-size: 3rem;
+    font-family: 'Poppins',sans-serif;
+    font-weight: 700;
+    color: #D60B3C;
+    border-bottom: 0.3rem solid #DE0B38;
+    margin-bottom: 5rem; }
+  .math__content {
+    position: relative; }
+    .math__content--heading {
+      font-size: 2.5rem;
+      font-family: 'Poppins',sans-serif;
+      color: #4B4B4B;
+      font-weight: 700; }
+    .math__content--subheading {
+      color: #1E4190;
+      font-family: 'Poppins',sans-serif;
+      font-style: italic; }
+    .math__content--btn {
+      right: 4%;
+      top: .5rem;
+      position: absolute;
+      font-size: 1.5rem;
+      color: white;
+      background-color: #D60B3C;
+      border-radius: 20rem;
+      border: none;
+      padding: 0rem .5rem; }
+      .math__content--btn:focus, .math__content--btn:active {
+        outline: none; }
+    .math__content--box {
+      display: grid;
+      grid-template-columns: repeat(6, 13%) 10%;
+      column-gap: 2rem;
+      margin-bottom: 5rem; }
+      .math__content--box-item {
+        position: relative;
+        width: 20rem; }
+        .math__content--box-item-img {
+          transform: translateY(1rem);
+          width: 16rem;
+          height: 22rem;
+          margin-bottom: 2rem;
+          border-radius: .5rem; }
+        .math__content--box-item-btn {
+          position: absolute;
+          bottom: 3.5rem;
+          left: 50%;
+          transform: translateX(-65%) translateY(1rem);
+          background-color: #D60B3C;
+          color: white;
+          border: none;
+          padding: .2rem 3rem;
+          width: fit-content;
+          font-size: 1.5rem;
+          border-radius: .5rem; }
+          .math__content--box-item-btn:focus, .math__content--box-item-btn:active {
+            outline: none; }
+        .math__content--box-item-title {
+          position: relative;
+          left: 50%;
+          transform: translate(-59%, 0.6rem);
+          font-size: 1.5rem;
+          font-family: 'Roboto',sans-serif;
+          font-weight: 500;
+          color: #1E4190;
+          text-align: center;
+          justify-self: center; }
+
 .must {
   height: 100%;
   margin-bottom: 3rem;
@@ -3185,6 +3287,13 @@ nav {
   right: -40%;
   height: 60rem;
   transform: translateY(10rem); }
+
+.state-img6 {
+  position: absolute;
+  z-index: -1;
+  transform: translateY(-80%);
+  right: -40%;
+  height: 70rem; }
 
 .state {
   height: 100%;
