--- a/Main/Application/templates/Application/base.html
+++ b/Main/Application/templates/Application/base.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="{% static 'main.css' %}">
 </head>
 <body>
 
@@ -41,6 +42,145 @@
     </nav>
 
     {% block content %}{% endblock %}
+
+    <footer id="section-footer1" class="container-fluid">
+        <div class="footer1-connect">
+            <h3 class="footer1-connect--text">Connect with us 
+                <img class="footer1-connect--text-img" src="{% static 'images/facebook.png' %}" alt=""> 
+                <img class="footer1-connect--text-img" src="{% static 'images/instagram.png' %}" alt=""> 
+                <img class="footer1-connect--text-img" src="{% static 'images/youtube.png' %}" alt=""> 
+                <img class="footer1-connect--text-img" src="{% static 'images/linkedin.png' %}" alt=""> 
+            </h3>
+            <h3 class="footer1-connect--text1">Contact 
+                <img class="footer1-connect--text1-img" src="{% static 'images/email.png' %}" alt=""> 
+                <span>Coursify@gmail.com</span>
+            </h3>
+        </div>
+        <div class="footer1">
+            <div class="footer1__content">
+                <div class="footer1__content--ncert">
+                    <h1 class="ncert-heading">NCERT</h1>
+                    <div class="ncert-content">
+                        <h2 class="ncert-title">Class 11-12</h2>
+                        <div class="ncert-link">
+                            <a class="ncert-link--items" href="">Class 12 Physics NCERT Solutions</a>
+                            <a class="ncert-link--items" href="">Class 12 Physics NCERT Solutions</a>
+                            <a class="ncert-link--items" href="">Class 12 Physics NCERT Solutions</a>
+                            <a class="ncert-link--items" href="">Class 12 Physics NCERT Solutions</a>
+                            <a class="ncert-link--items" href="">Class 12 Physics NCERT Solutions</a>
+                            <a class="ncert-link--items" href="">Class 12 Physics NCERT Solutions</a>
+                            <a class="ncert-link--items" href="">Class 12 Physics NCERT Solutions</a>
+                            <a class="ncert-link--items" href="">Class 12 Physics NCERT Solutions</a>
+                        </div>
+                    </div>
+                    <div class="ncert-content">
+                        <h2 class="ncert-title">Class 9-10</h2>
+                        <div class="ncert-link">
+                            <a class="ncert-link--items" href="">Class 12 Physics NCERT Solutions</a>
+                            <a class="ncert-link--items" href="">Class 12 Physics NCERT Solutions</a>
+                            <a class="ncert-link--items" href="">Class 12 Physics NCERT Solutions</a>
+                            <a class="ncert-link--items" href="">Class 12 Physics NCERT Solutions</a>
+                        </div>
+                    </div>
+                    <div class="ncert-content">
+                        <h2 class="ncert-title">Class 6-8</h2>
+                        <div class="ncert-link">
+                            <a class="ncert-link--items" href="">Class 12 Physics NCERT Solutions</a>
+                            <a class="ncert-link--items" href="">Class 12 Physics NCERT Solutions</a>
+                            <a class="ncert-link--items" href="">Class 12 Physics NCERT Solutions</a>
+                            <a class="ncert-link--items" href="">Class 12 Physics NCERT Solutions</a>
+                            <a class="ncert-link--items" href="">Class 12 Physics NCERT Solutions</a>
+                            <a class="ncert-link--items" href="">Class 12 Physics NCERT Solutions</a>
+                        </div>
+                    </div>
+                    <h1 class="ncert-heading" style="margin-top: 2rem;">CBSE</h1>
+                    <div class="ncert-link">
+                        <a class="ncert-link--items" style="margin-right: 2rem; font-size:1.5rem;" href="">Class 12</a>
+                        <a class="ncert-link--items" style="margin-right: 2rem; font-size:1.5rem;" href="">Class 11</a>
+                        <a class="ncert-link--items" style="margin-right: 2rem; font-size:1.5rem;" href="">Class 10</a>
+                        <a class="ncert-link--items" style="margin-right: 2rem; font-size:1.5rem;" href="">Class 9</a>
+                        <a class="ncert-link--items" style="margin-right: 2rem; font-size:1.5rem;" href="">Class 8</a>
+                        <a class="ncert-link--items" style="margin-right: 2rem; font-size:1.5rem;" href="">Class 7</a>
+                    </div>
+                    <h1 class="ncert-heading" style="margin-top: 2rem;">ICSE</h1>
+                    <div class="ncert-link">
+                        <a class="ncert-link--items" style="margin-right: 2rem; font-size:1.5rem;" href="">Class 12</a>
+                        <a class="ncert-link--items" style="margin-right: 2rem; font-size:1.5rem;" href="">Class 11</a>
+                        <a class="ncert-link--items" style="margin-right: 2rem; font-size:1.5rem;" href="">Class 10</a>
+                        <a class="ncert-link--items" style="margin-right: 2rem; font-size:1.5rem;" href="">Class 9</a>
+                        <a class="ncert-link--items" style="margin-right: 2rem; font-size:1.5rem;" href="">Class 8</a>
+                        <a class="ncert-link--items" style="margin-right: 2rem; font-size:1.5rem;" href="">Class 7</a>
+                    </div>
+                    <h1 class="ncert-heading" style="margin-top: 2rem;">State Boards</h1>
+                    <div class="ncert-link">
+                        <a class="ncert-link--items" style="margin-right: 2rem;font-size:1.5rem;" href="">Uttar Pradesh Board</a>
+                        <a class="ncert-link--items" style="margin-right: 2rem;font-size:1.5rem;" href="">Delhi Board</a>
+                        <a class="ncert-link--items" style="margin-right: 2rem;font-size:1.5rem;" href="">Harayana Board</a>
+                        <a class="ncert-link--items" style="margin-right: 2rem;font-size:1.5rem;" href="">Himachal Pradesh Board</a>
+                        <a class="ncert-link--items" style="margin-right: 2rem;font-size:1.5rem;" href="">Bihar Board</a>
+                        <a class="ncert-link--items" style="margin-right: 2rem;font-size:1.5rem;" href="">Jarkhand Board</a>
+                        <a class="ncert-link--items" style="margin-right: 2rem;font-size:1.5rem;" href="">madhya Pradesh Board</a>
+                        <a class="ncert-link--items" style="margin-right: 2rem;font-size:1.5rem;" href="">Chhattishgarh Board</a>
+                    </div>
+                    <h1 class="ncert-heading" style="margin-top: 2rem;">Reference Books</h1>
+                    <div class="ncert-content">
+                        <h2 class="ncert-title">Class 11-12</h2>
+                        <div class="ncert-link">
+                            <a class="ncert-link--items" href="">HC Verma Solutions class 12 Physics</a>
+                            <a class="ncert-link--items" href="">M S Chouhan Class 12 Chemistry</a>
+                            <a class="ncert-link--items" href="">K C Sinha Class 12 Maths</a>
+                            <a class="ncert-link--items" href="">Errorless Class 12 Biology</a>
+                            <a class="ncert-link--items" href="">HC Verma Solutions class 11 Physics</a>
+                            <a class="ncert-link--items" href="">M S Chouhan Class 11 Chemistry</a>
+                            <a class="ncert-link--items" href="">K C Sinha Class 11 Maths</a>
+                            <a class="ncert-link--items" href="">Errorless Class 11 Biology</a>
+                        </div>
+                    </div>
+                    <div class="ncert-content">
+                        <h2 class="ncert-title">Class 9-10</h2>
+                        <div class="ncert-link">
+                            <a class="ncert-link--items" href="">RD Sharma Class 10 Maths</a>
+                            <a class="ncert-link--items" href="">RS Agarwal Class 10 Maths</a>
+                            <a class="ncert-link--items" href="">Exampler Class 10 Science</a>
+                            <a class="ncert-link--items" href="">Lakmir Singh Class 10 Science</a>
+                            <a class="ncert-link--items" href="">RD Sharma Class 9 Maths</a>
+                            <a class="ncert-link--items" href="">RS Agarwal Class 9 Maths</a>
+                            <a class="ncert-link--items" href="">Exampler Class 9 Science</a>
+                            <a class="ncert-link--items" href="">Lakmir Singh Class 9 Science</a>
+                        </div>
+                    </div>
+                    <div class="ncert-content">
+                        <h2 class="ncert-title">Class 6-8</h2>
+                        <div class="ncert-link">
+                            <a class="ncert-link--items" href="">RD Sharma Class 8 Maths</a>
+                            <a class="ncert-link--items" href="">RS Agarwal Class 8 Maths</a>
+                            <a class="ncert-link--items" href="">Exampler Class 8 Science</a>
+                            <a class="ncert-link--items" href="">RD Sharma Class 7 Maths</a>
+                            <a class="ncert-link--items" href="">RS Agarwal Class 7 Maths</a>
+                            <a class="ncert-link--items" href="">Exampler Class 7 Science</a>
+                            <a class="ncert-link--items" href="">RD Sharma Class 6 Maths</a>
+                            <a class="ncert-link--items" href="">RS Agarwal Class 6 Maths</a>
+                            <a class="ncert-link--items" href="">Exampler Class 6 Science</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="footer1__img">
+                <!-- Contact <img src="images/" alt=""> -->
+                <img class="footer1__img--logo" src="{% static 'images/favicon.png' %}" alt="">
+                <h3 class="footer1__img--text">Clarify your Doubts.</h3>
+                <h3 class="footer1__img--text">In your Language.</h3>
+
+                <h4 class="footer1__img--links">Quick Links</h4>
+                <a class="footer1__img--items" href="">About US</a>
+                <a class="footer1__img--items" href="">Careers</a>
+                <a class="footer1__img--items" href="">Press Releases</a>
+                <a class="footer1__img--items" href="">Provacy</a>
+                <a class="footer1__img--items" href="">About US</a>
+            </div>
+            
+        </div>
+    </footer>
     
     <script src="{% static 'main.js' %}"></script>
     <script src="{% static 'app.js' %}"></script>
