--- a/Main/static/main.css
+++ b/Main/static/main.css
@@ -812,6 +812,108 @@ body {
     outline: none;
     border: none; }
 
+.exams {
+  height: 100%;
+  margin-bottom: 3rem;
+  display: grid;
+  grid-template-columns: 17% 83%;
+  column-gap: 6rem; }
+  .exams__names {
+    display: grid;
+    grid-template-rows: repeat(10, 4.5rem); }
+    .exams__names--btn {
+      transform: translateY(5rem);
+      background-color: transparent;
+      border-left: none;
+      border-right: none;
+      color: #1E4190;
+      font-size: 1.5rem;
+      font-family: 'Roboto',sans-serif;
+      font-weight: 500;
+      border-right: 0.1rem solid #bbb9b9;
+      border-top-right-radius: 1rem;
+      background-color: white; }
+      .exams__names--btn:not(:first-child) {
+        border-top: none;
+        box-shadow: 0rem -0.2rem 1.5rem rgba(0, 0, 0, 0.1);
+        border-bottom: 0.1rem solid #bbb9b9; }
+      .exams__names--btn:first-child {
+        border-top: 0.1rem solid #bbb9b9;
+        border-bottom: 0.1rem solid #bbb9b9; }
+      .exams__names--btn:hover, .exams__names--btn:focus {
+        background-color: #DE0B38;
+        color: white;
+        outline: none; }
+
+.examination {
+  width: 85%; }
+  .examination .heading {
+    margin-top: 4rem;
+    padding-bottom: 1.5rem;
+    font-size: 3rem;
+    font-family: 'Poppins',sans-serif;
+    font-weight: 700;
+    color: #D60B3C;
+    border-bottom: 0.3rem solid #DE0B38;
+    margin-bottom: 5rem; }
+  .examination__content {
+    position: relative; }
+    .examination__content--heading {
+      font-size: 2.5rem;
+      font-family: 'Poppins',sans-serif;
+      color: #4B4B4B;
+      font-weight: 700; }
+    .examination__content--btn {
+      right: 4%;
+      top: .5rem;
+      position: absolute;
+      font-size: 1.5rem;
+      color: white;
+      background-color: #D60B3C;
+      border-radius: 20rem;
+      border: none;
+      padding: 0rem .5rem; }
+      .examination__content--btn:focus, .examination__content--btn:active {
+        outline: none; }
+    .examination__content--box {
+      display: grid;
+      grid-template-columns: repeat(5, 13%) 10%;
+      column-gap: 7.5rem;
+      margin-bottom: 5rem; }
+      .examination__content--box-item {
+        position: relative;
+        width: 20rem; }
+        .examination__content--box-item-img {
+          transform: translateY(1rem);
+          width: 16rem;
+          height: 22rem;
+          margin-bottom: 2rem;
+          border-radius: .5rem; }
+        .examination__content--box-item-btn {
+          position: absolute;
+          bottom: 3.5rem;
+          left: 50%;
+          transform: translateX(-65%) translateY(1rem);
+          background-color: #D60B3C;
+          color: white;
+          border: none;
+          padding: .2rem 3rem;
+          width: fit-content;
+          font-size: 1.5rem;
+          border-radius: .5rem; }
+          .examination__content--box-item-btn:focus, .examination__content--box-item-btn:active {
+            outline: none; }
+        .examination__content--box-item-title {
+          position: relative;
+          left: 50%;
+          transform: translate(-59%, 0.6rem);
+          font-size: 1.5rem;
+          font-family: 'Roboto',sans-serif;
+          font-weight: 500;
+          color: #1E4190;
+          text-align: center;
+          justify-self: center; }
+
 .exercise-heading {
   text-align: center;
   font-size: 3rem;
@@ -1051,40 +1153,6 @@ body {
       font-size: 2.5rem;
       font-family: 'Poppins',sans-serif;
       font-weight: 600; }
-
-.myfooter {
-  margin: auto;
-  display: flex;
-  justify-content: space-around;
-  width: 100%;
-  padding: 1rem 0rem; }
-
-.myfooter a {
-  color: #a1a1a1;
-  margin: 5px 0px; }
-
-.footer-sec1 {
-  display: flex;
-  justify-content: space-between;
-  flex-direction: column; }
-
-.footer-sec2 {
-  display: flex;
-  flex-direction: column; }
-
-.contact span {
-  align-items: center;
-  margin: 0.5rem; }
-
-.contact h2 {
-  margin: 0.5rem; }
-
-.contact a {
-  margin: 0.5rem; }
-
-@media only screen and (max-width: 600px) {
-  .myfooter {
-    flex-wrap: wrap; } }
 
 .footer1-connect {
   margin-bottom: 4rem; }
@@ -3603,6 +3671,11 @@ nav {
 #section-footer1 {
   margin-top: 10rem;
   position: relative;
+  height: fit-content; }
+
+#section-exams {
+  position: relative;
+  margin-top: 5rem;
   height: fit-content; }
 
 #section-solve {
